--- a/templates/courses/events.html
+++ b/templates/courses/events.html
@@ -111,7 +111,8 @@
           data-basealign="grid"
           data-responsive_offset="off"
           style="z-index: 1;">
-            Academia Blockchain es el futuro de la educación libre
+            Academia Blockchain es el futuro <br>
+            de la educación libre
         </div>
 
         <!-- LAYER NR. 2
@@ -151,7 +152,7 @@
           data-x="center"
           data-y="middle"
           data-hoffset="['0', '0', '0', '0']"
-          data-voffset="['0', '0', '0', '0']"
+          data-voffset="['25', '25', '25', '25']"
           data-width="['auto']"
           data-height="['auto']"
           data-fontsize="['18', '17', '16', '15']"
