--- a/templates/courses/event_card.html
+++ b/templates/courses/event_card.html
@@ -1,5 +1,13 @@
+{% load static %}
 <div class="col-sm-6 col-lg-3 col-xs-12">
     <div class="card card_main">
+    {% if event.event_type == 'EVENT' %}
+        <img title="Evento" src="{% static 'assets/img/diamante_verde.png' %}" class="diamond" alt="">
+    {% elif event.event_type == 'COURSE' %}
+        <img title="Curso Online" src="{% static 'assets/img/diamante_amarillo.png' %}" class="diamond" alt="">
+    {% elif event.event_type == 'EXAM' %}
+        <img title="Examen" src="{% static 'assets/img/diamante_naranja.png' %}" class="diamond" alt="">
+    {% endif %}
       <a href="{% url 'event_detail' event.id %}" class="position-relative">
           {% if event.image %}
             <img class="card-img-top main_card_img" src="{{ event.image.url }}" alt="Card image">
