--- a/templates/profiles/profile_certificates.html
+++ b/templates/profiles/profile_certificates.html
@@ -1,4 +1,5 @@
 {% extends 'profiles/profile_base.html' %}
+{% load static %}
 
 {% block profile_content %}
 
@@ -6,6 +7,30 @@
         <div class="row">
             <div class="media media-avator-view flex-column flex-sm-row">
                 <div class="media-body">
+                    <div class="container">
+                        <div class="col-md-2">
+                            <div class="alert alert-success" role="alert">
+                                <h4 class="alert-heading text-right">25</h4>
+                                <img title="Evento" src="{% static 'assets/img/diamante_verde.png' %}" class="diamond" alt="">
+                                <p class="mb-0"></p>
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="alert alert-warning" role="alert">
+                                <h4 class="alert-heading text-right">1</h4>
+                                <img title="Curso Online" src="{% static 'assets/img/diamante_amarillo.png' %}" class="diamond" alt="">
+                                <p class="mb-0"></p>
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="alert alert-secondary" role="alert">
+                                <h4 class="alert-heading text-right">1</h4>
+                                <img title="Curso Grabado" src="{% static 'assets/img/diamante_magenta.png' %}" class="diamond" alt="">
+                                <p class="mb-0"></p>
+                            </div>
+                        </div>
+                    </div>
+
                     <p>
                       Aquí puedes encontrar tus certificados. Recuerda que para recibir un
                         certificado debes solicitarlo, puedes hacerlo en la página de "Favoritos". El creador del curso / evento
@@ -16,6 +41,13 @@
 
                     {% for c in certificates %}
                         <div class="media media-list-view mb-5">
+{#                            {% if c.event.event_type == 'EVENT' %}#}
+{#                                <img title="Evento" src="{% static 'assets/img/diamante_verde.png' %}" class="diamond" alt="">#}
+{#                            {% elif c.event.event_type == 'COURSE' %}#}
+{#                                <img title="Curso" src="{% static 'assets/img/diamante_amarillo.png' %}" class="diamond" alt="">#}
+{#                            {% elif c.event.event_type == 'EXAM' %}#}
+{#                                <img title="Examen" src="{% static 'assets/img/diamante_naranja.png' %}" class="diamond" alt="">#}
+{#                            {% endif %}#}
                             <a class="media-img" href="">
                                 {% if c.event.image %}
                                     <img src="{{ c.event.image.url }}" alt="">
