#37 form create remove recurrent

--- a/templates/courses/event_create.html
+++ b/templates/courses/event_create.html
@@ -261,9 +261,9 @@
         $('#radio_exam').on("click", function(){
             // es un examen que se toma una vez
             $("#input_date_start").show();
-            $("#input_date_end").show();
+            $("#input_date_end").hide();
             $("#input_time_day").show();
-            $("#event_recurrent").show();
+            $("#event_recurrent").hide();
             $('#input_record_date').hide();
 
             $('#diamante_amarillo').show();
