--- a/templates/profiles/profile_certificates.html
+++ b/templates/profiles/profile_certificates.html
@@ -29,6 +29,13 @@
                                 <p class="mb-0"></p>
                             </div>
                         </div>
+                        <div class="col-md-2">
+                            <div class="alert alert-info" role="alert">
+                                <h4 class="alert-heading text-right">2</h4>
+                                <img title="Examen" src="{% static 'assets/img/diamante_azul.png' %}" class="diamond" alt="">
+                                <p class="mb-0"></p>
+                            </div>
+                        </div>
                     </div>
 
                     <p>
