--- a/templates/courses/event_create.html
+++ b/templates/courses/event_create.html
@@ -206,6 +206,7 @@
             format: 'dd/mm/yyyy',
         });
 
+        // Default
         $('#radio_live_course').prop("checked", true);
         $('#diamante_azul').hide();
         $('#diamante_amarillo').show();
