--- a/templates/profiles/profile_certificates.html
+++ b/templates/profiles/profile_certificates.html
@@ -8,37 +8,44 @@
             <div class="media media-avator-view flex-column flex-sm-row">
                 <div class="media-body">
                     <div class="container">
-                        <div class="col-md-2">
-                            <div class="alert alert-success" role="alert">
-                                <h4 class="alert-heading text-right">25</h4>
-                                <img title="Evento" src="{% static 'assets/img/diamante_verde.png' %}" class="diamond" alt="">
-                                <p class="mb-0"></p>
+                        <div class="row">
+                            <div class="col-md certi_col">
+                                <div class="img_col">
+                                    <img title="Evento" src="{% static 'assets/img/diamante_verde.png' %}"  width="20px" alt="">
+                                </div>
+                                <div>
+                                    <h4>25</h4>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="alert alert-warning" role="alert">
-                                <h4 class="alert-heading text-right">1</h4>
-                                <img title="Curso Online" src="{% static 'assets/img/diamante_amarillo.png' %}" class="diamond" alt="">
-                                <p class="mb-0"></p>
+                            <div class="col-md  certi_col">
+                                 <div class="img_col">
+                                    <img title="Evento" src="{% static 'assets/img/diamante_amarillo.png' %}"  width="20px" alt="">
+                                </div>
+                                <div>
+                                    <h4>15</h4>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="alert alert-secondary" role="alert">
-                                <h4 class="alert-heading text-right">1</h4>
-                                <img title="Curso Grabado" src="{% static 'assets/img/diamante_magenta.png' %}" class="diamond" alt="">
-                                <p class="mb-0"></p>
+                            <div class="col-md certi_col">
+                                 <div class="img_col">
+                                    <img title="Evento" src="{% static 'assets/img/diamante_magenta.png' %}"  width="20px" alt="">
+                                </div>
+                                <div>
+                                    <h4>5</h4>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="alert alert-info" role="alert">
-                                <h4 class="alert-heading text-right">2</h4>
-                                <img title="Examen" src="{% static 'assets/img/diamante_azul.png' %}" class="diamond" alt="">
-                                <p class="mb-0"></p>
+                            <div class="col-md certi_col">
+                                 <div class="img_col">
+
+                                    <img title="Evento" src="{% static 'assets/img/diamante_azul.png' %}"  width="20px" alt="">
+                                </div>
+                                <div>
+                                    <h4>22</h4>
+                                </div>
                             </div>
                         </div>
                     </div>
 
-                    <p>
+                    <p class="pt-md-10">
                       Aquí puedes encontrar tus certificados. Recuerda que para recibir un
                         certificado debes solicitarlo, puedes hacerlo en la página de "Favoritos". El creador del curso / evento
                         debe aceptar tu solicitud.
